# raybox

./: .pre-commit-config.yaml  LICENSE  Makefile  README.md  main.py  mypy.ini  pyproject.toml  pytest.ini  serve_config.yaml
.github/workflows/: ci.yml
ee/: LICENSE  README.md  __init__.py  sqlc.yaml
ee/raybox/: __init__.py
ee/raybox/api/: cli.py  database.py  executor_server.py
ee/raybox/api/db/: __init__.py  auth.py  models.py  queries.py
ee/supabase/: config.toml  queries.sql  sqlc.yaml
ee/supabase/migrations/: 20250108000000_create_auth_tables.sql
examples/codeagent_smolagent/: raybox_executor.py
examples/openai/: agent.py
examples/smolagents/: __init__.py  codeagent.py
src/: __init__.py  pyproject.toml
src/agents/: __init__.py
src/agents/smolagents/: __init__.py  codeagent.py  raybox_executor.py
src/api/: __init__.py  cli.py  executor_server.py  sandbox.py  server.py
src/raybox/: __init__.py
src/raybox/api/: cli.py
src/raybox/sdk/python/: __init__.py  cli.py  client.py  config.py  exceptions.py  types.py
tests/: README.md  test_sandbox_basic.py  test_stateful_execution.py
tests/ee/: LICENSE  __init__.py  test_sandbox_basic.py  test_stateful_execution.py
tests/integration/: test_api.py  test_codeagent.py
tests/sdk/python/: __init__.py  test_client.py  test_exceptions.py  test_integration.py  test_types.py
