[project]
name = "raybox"
version = "0.1.0"
description = "AI Sandbox environment orchestration with Ray"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.69.0",
    "litellm>=1.77.7",
    "podman>=5.6.0",
    "python-dotenv>=1.1.1",
    "ray[serve]>=2.49.2",
    "smolagents[openai,toolkit]>=1.22.0",
]
